tests/optional_props/optional_props.exp
Error: test.js:2
  2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
                               ^ object type. This type is incompatible with
  2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
            ^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
      2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
                ^^^^^^^^^^^^^^^^ property `foo`. Property not found in
      2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
                                   ^ object type

Error: test.js:8
  8: o.foo = 0; // future widening is constrained
             ^ number. This type is incompatible with
  8: o.foo = 0; // future widening is constrained
     ^^^^^ string

Error: test.js:12
 12: bar({foo: ""});
         ^^^^^^^^^ object literal. This type is incompatible with the expected param type of
 10: function bar(config: { foo?: number }) {}
                          ^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
     12: bar({foo: ""});
                   ^^ string. This type is incompatible with
     10: function bar(config: { foo?: number }) {}
                                      ^^^^^^ number

Error: test2.js:3
  3: a.foo = null; // But this is an error
             ^^^^ null. This type is incompatible with
  3: a.foo = null; // But this is an error
     ^^^^^ string

Error: test2.js:10
 10: var d: { foo?: string } = { foo: null }; // But this is an error
                               ^^^^^^^^^^^^^ object literal. This type is incompatible with
 10: var d: { foo?: string } = { foo: null }; // But this is an error
            ^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
     10: var d: { foo?: string } = { foo: null }; // But this is an error
                                          ^^^^ null. This type is incompatible with
     10: var d: { foo?: string } = { foo: null }; // But this is an error
                        ^^^^^^ string

Error: test3.js:54
 54:         this.x.b = 'hello';
                    ^ property `b`. Property not found in
 54:         this.x.b = 'hello';
             ^^^^^^ object literal

Error: test3_exact_annot.js:4
  4: const a: {| a: number |} = { a: 1 };
              ^^^^^^^^^^^^^^^ object type. This type is incompatible with
  5: const b: { a: number, b?: number } = a; // error: property `b` not found
              ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `b` is incompatible:
      5: const b: { a: number, b?: number } = a; // error: property `b` not found
                  ^^^^^^^^^^^^^^^^^^^^^^^^^ property `b`. Property not found in
      4: const a: {| a: number |} = { a: 1 };
                  ^^^^^^^^^^^^^^^ object type

Error: test3_exact_annot.js:7
  7: (a.b: number); // error: property `b` not found
        ^ property `b`. Property not found in
  4: const a: {| a: number |} = { a: 1 };
              ^^^^^^^^^^^^^^^ object type

Error: test3_failure.js:7
  7:     this.o.x.b = 'hello'; // this is a spurious error (see test3.js for details)
                  ^ property `b`. Property not found in
  7:     this.o.x.b = 'hello'; // this is a spurious error (see test3.js for details)
         ^^^^^^^^ object literal


Found 9 errors
